sonarlint cleanup